# ampdelete

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
delete/: __main__.py
delete/delete/: __init__.py
src/: cli.py
src/delete/: __init__.py
templates/: index.html  layout.html
