[tool.poetry]
name = "ampdelete"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
Flask = "^2.3.3"
psycopg = {extras = ["binary"], version = "^3.1.10"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
